syntax = "proto3";
package product;
option java_package = "com.ferza17.ecommercemicroservicesv2.proto.v1.product";


import "google/protobuf/timestamp.proto";

message Product {
  string id = 1 ;
  string name = 2 ;
  string description = 3 ;
  string uom = 4 ;
  string image = 5 ;
  double price = 6 ;
  int64 stock = 7 ;
  google.protobuf.Timestamp created_at = 8 ;
  google.protobuf.Timestamp updated_at = 9 ;
  optional google.protobuf.Timestamp discarded_at = 10 ;
}